--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h2>Our Story</h2>
                         <h3 class="gla_subtitle">The Thirteen of January</h3>
 
-                        <p>Berawal dari 23 November 2010, di sebuah lorong mesjid. Kemudian dipertemukan di sebuah media sosial, dia seorang drummer, begitu juga aku pada saat itu. Bukan hanya hobi, namun minat lainnya dia memiliki kesamaan dengan aku, bahkan pernalan aku dengan sebuah bahasa pemograman Python itu bermula membantunya dalam skripsi membangun robot. Iya, dia spesial. Melengkapi aku yang mudah lupa, dengan ingatannya yang super kuat, bahkan untuk hal yang kecil. Terimakasih telah bersama dan 23 November 2018 aku putuskan untuk meminta ijin secara formal ke negara untuk melangsungkan pernikahan di 13 Januari 2018." — Muhamad Fajar</p>
+                        <p>Berawal dari 23 November 2010, di sebuah lorong mesjid. Kemudian dipertemukan di sebuah media sosial, dia seorang drummer, begitu juga aku pada saat itu. Bukan hanya hobi, namun minat lainnya dia memiliki kesamaan dengan aku, bahkan perkenalan aku dengan sebuah bahasa pemograman Python itu bermula membantunya dalam skripsi membangun robot. Iya, dia spesial. Melengkapi aku yang mudah lupa, dengan ingatannya yang super kuat, bahkan untuk hal yang kecil. Terimakasih telah bersama dan 23 November 2018 aku putuskan untuk meminta ijin secara formal ke negara untuk melangsungkan pernikahan di 13 Januari 2019." — Muhamad Fajar</p>
                     </div>
                 </div>
 
