--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 <!-- Library CSS -->
-<link href="css/library.css" rel="stylesheet">
+<link href="css/library_79a64054905d625d3b87d22c5513074f.css" rel="stylesheet">
 
 <!-- Icons CSS -->
-<link href="fonts/themify-icons.css" rel="stylesheet">
+<link href="fonts/themify-icons_5f18b1dd77db8e8e43994ab235fa3d9a.css" rel="stylesheet">
 
 <!-- Theme CSS -->
-<link href="css/style.css" rel="stylesheet">
+<link href="css/style_bb075a041c96dce42960a33d8291a58c.css" rel="stylesheet">
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700%7COpen+Sans:300,400,700%7CPlayfair+Display:400,400i,700,700i" rel="stylesheet">
+<link href="css/css_772ee6d822ff75e687029203c886e2d3.css" rel="stylesheet">
 
 <!-- Other Fonts -->
-<link href="fonts/marsha/stylesheet.css" rel="stylesheet">
+<link href="fonts/marsha/stylesheet_a4cb71280f2e16f3830111f94a149cb7.css" rel="stylesheet">
 
 </head>
 
@@ -47,7 +47,7 @@
 
 
     <!-- Slider -->
-    <div class="gla_slider gla_image_bck gla_wht_txt gla_fixed"  data-image="photos/IMG_0236_lemur.jpeg" data-stellar-background-ratio="0.6">
+    <div class="gla_slider gla_image_bck gla_wht_txt gla_fixed"  data-image="photos/cache/IMG_0236_lemur_e70009b869273bbd1fe8e1e324868879.jpg" data-stellar-background-ratio="0.6">
 
         <!-- Over -->
         <div class="gla_over" data-color="#9abab6" data-opacity="0.2"></div>
@@ -82,7 +82,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/IMG_0285_lemur.jpeg">
+        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/cache/IMG_0285_lemur_6f47dc054aea8b84c9a20be3b9847010.jpg">
 
             <!-- Over -->
             <div class="gla_over" data-color="#282828" data-opacity="0.4"></div>
@@ -106,7 +106,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/IMG_0173_lemur.jpeg">
+        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/cache/IMG_0173_lemur_5cbe482ab9293fa2a867cb3a5c01088d.jpg">
 
             <!-- Over -->
             <div class="gla_over" data-color="#282828" data-opacity="0.4"></div>
@@ -130,7 +130,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/IMG_0429_lemur.jpeg">
+        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.4" data-image="photos/cache/IMG_0429_lemur_a2c363bbd21981d23af37a8dd988b06d.jpg">
 
             <!-- Over -->
             <div class="gla_over" data-color="#282828" data-opacity="0.4"></div>
@@ -156,12 +156,12 @@
 <!-- Page End -->
 
 <!-- JQuery -->
-<script src="js/jquery-1.12.4.min.js"></script>
+<script src="js/jquery-1.12.4.min_dbd380673be17d7de1999d7b81cb58b2.js"></script>
 <!-- Library JS -->
-<script src="js/library.js"></script>
+<script src="js/library_c1b431f62f01a7632b52aa112daba166.js"></script>
 
 <!-- Theme JS -->
-<script src="js/script.js"></script>
+<script src="js/script_170be3877276feaa643d6d384b8976fb.js"></script>
 
 </body>
 </html>
