--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
 <!-- Other Fonts -->
 <link href="fonts/marsha/stylesheet_a4cb71280f2e16f3830111f94a149cb7.css" rel="stylesheet">
 
+<!-- Rotate JS -->
+<script>
+    var PleaseRotateOptions = {
+        startOnPageLoad: true,
+        message: "Please Rotate Your Device",
+        subMessage: "(best viewed in landscape mode)",
+        allowClickBypass: false,
+        onlyMobile: true
+    }
+</script>
+<script src="js/pleaserotate.min_b131cca3462052260b7b03db02206fd9.js"></script>
+
 </head>
 
 
 <!-- Body -->
 <body class="gla_middle_titles">
-
 
 <!-- Page -->
 <div class="gla_page" id="gla_page">
