Add CF web analytic

--- a/index.html
+++ b/index.html
@@ -172,5 +172,6 @@
 <!-- Theme JS -->
 <script src="js/script_170be3877276feaa643d6d384b8976fb.js"></script>
 
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5b61b462948b4f5e94e13ef7d875ceae"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
